--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
   background-image: url("./assets/main_background/background_farm.jpeg");
   background-position: center;
   background-size: cover;
+
+  /* new */
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* new */
 }
 
 h1 {
