--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
-  background-image: url("./assets/main_background/background_farm.jpeg");
+  /* background-image: url("./assets/main_background/background_farm.jpeg");
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
+  background-color: coral;
 
   /* new */
   margin: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   /* new */
 }
 
