--- a/gameover.css
+++ b/gameover.css
@@ -9,7 +9,7 @@ span {
 }
 
 .mainFlex {
-  border: 5px solid #806655;
+  /* border: 5px solid #806655; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -37,4 +37,8 @@ span {
   justify-content: center;
   width: 325px;
   height: 450px;
+}
+
+#enter {
+  font-size: 1.5rem;
 }
