--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body {
-  /* background-image: url("./assets/main_background/background_farm.jpeg");
-  background-position: center;
-  background-size: cover; */
-
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #40332b;
   margin: 0;
   background-color: #fbc9a9;
+  /* font-weight: 400; */
+}
+
+span {
+  font-weight: 500;
+}
+
+.mainFlex {
+  /* border: 5px solid #806655; */
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
@@ -18,6 +22,21 @@ h1 {
   text-align: center;
 }
 
+.picture {
+  border-left: 5px solid #806655;
+  border-top: 5px solid #806655;
+  border-bottom: 5px solid #806655;
+  width: 800px;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  width: 800px;
+}
+
+/* this is the id of the canvas when p5.js runs */
 #defaultCanvas0 {
   border-top: 5px solid #806655;
   border-bottom: 5px solid #806655;
@@ -34,4 +53,13 @@ h1 {
   justify-content: center;
   width: 325px;
   height: 450px;
+  /* background-color: #abfdff; */
+}
+
+#enter {
+  font-size: 1.5rem;
+}
+
+#space {
+  font-size: 1.5rem;
 }
